VSC 6.1 Content Update Index and Login

--- a/index.html
+++ b/index.html
@@ -90,6 +90,52 @@
         </header>
 
         <main class="app-main">
+            <section class="hero">
+                <div class="hero-content">
+                    <article class="card">
+                        <header class="card-header">
+                            <span class="material-icons-outlined" aria-hidden="true">bolt</span>
+                            <h3>Quick Actions</h3>
+                        </header>
+                        <ul class="action-list">
+                            <li>
+                                <a class="action-link" href="products.html">
+                                    <span class="material-icons-outlined" aria-hidden="true">category</span>
+                                    <span>Organize product catalog for inbound shipments.</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="action-link" href="cartons.html">
+                                    <span class="material-icons-outlined" aria-hidden="true">qr_code_scanner</span>
+                                    <span>Validate carton IDs before labeling.</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="action-link" href="amazon-snapshot-upload.html">
+                                    <span class="material-icons-outlined" aria-hidden="true">compare_arrows</span>
+                                    <span>Upload the latest Amazon inventory snapshot.</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </article>
+                </div>
+                <div class="hero-highlights" aria-label="Operational highlights">
+                    <article class="highlight-card">
+                        <span class="material-icons-outlined highlight-icon success" aria-hidden="true">task_alt</span>
+                        <div class="highlight-copy">
+                            <h3>Authentication Secure</h3>
+                            <p>Session tokens validated with real-time expiry checks.</p>
+                        </div>
+                    </article>
+                    <article class="highlight-card">
+                        <span class="material-icons-outlined highlight-icon warning" aria-hidden="true">inventory</span>
+                        <div class="highlight-copy">
+                            <h3>Carton Intake</h3>
+                            <p>Configure carton verification flows before the next shipment arrives.</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
             <section id="dashboard" aria-labelledby="dashboardTitle">
                 <h2 id="dashboardTitle">Dashboard</h2>
                 <div class="controls">
