--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <span class="landing-eyebrow">Fulfillment Control Center</span>
                 <h1 id="landingTitle">WarehouseWrangler</h1>
-                <p>Bring inbound receipts, carton movements, and Amazon reconciliation together in a single command center. WarehouseWrangler turns warehouse signals into clear actions so your team can focus on shipping instead of spreadsheets.</p>
+                <p>Bring inbound receipts, carton movements, and Marketplace reconciliation together in a single command center. WarehouseWrangler turns warehouse signals into clear actions so your team can focus on shipping instead of spreadsheets.</p>
                 <div class="hero-actions">
                     <button type="button" class="btn btn-primary" data-open-login>
                         <span class="material-icons-outlined" aria-hidden="true">login</span>
@@ -49,15 +49,20 @@
                 <dl class="landing-metrics" aria-label="Operational highlights">
                     <div class="landing-metric">
                         <dt>Realtime carton oversight</dt>
-                        <dd>Follow every carton from Incoming to WML and GMR without losing track of box counts.</dd>
+                        <dd>Follow every carton from Incoming to your warehouse locations without losing track of box counts.</dd>
                     </div>
                     <div class="landing-metric">
-                        <dt>Amazon reconciliation</dt>
-                        <dd>Upload marketplace snapshots, compare deltas, and keep shipment records audit ready.</dd>
+                        <dt>Marketplace reconciliation</dt>
+                        <dd>Upload marketplace snapshots or connect, compare deltas, and keep shipment records audit ready.</dd>
                     </div>
                     <div class="landing-metric">
                         <dt>Planning intelligence</dt>
                         <dd>Blend planned stock, simulations, and product sales factors to protect coverage.</dd>
+                    </div>
+                    <div class="landing-metric">
+                        <!-- promote connection to other platforms via api -->
+                        <dt>Connect to other platforms</dt>
+                        <dd>Secure APIs enable integration with WMS, ERP, and 3PL systems for seamless data flow.</dd>
                     </div>
                 </dl>
             </div>
@@ -66,14 +71,14 @@
                     <span class="material-icons-outlined highlight-icon success" aria-hidden="true">inventory_2</span>
                     <div class="highlight-copy">
                         <h3>Inventory guardrails</h3>
-                        <p>Carton checks, movement logs, and JWT-secured APIs protect every stock move.</p>
+                        <p>Carton checks, movement logs, and secured APIs protect every stock move.</p>
                     </div>
                 </article>
                 <article class="highlight-card">
                     <span class="material-icons-outlined highlight-icon warning" aria-hidden="true">local_shipping</span>
                     <div class="highlight-copy">
                         <h3>Outbound confidence</h3>
-                        <p>Amazon shipment summaries keep carton and product traceability crystal clear.</p>
+                        <p>Marketplace shipment summaries keep carton and product traceability crystal clear.</p>
                     </div>
                 </article>
                 <article class="highlight-card">
@@ -96,10 +101,10 @@
                 <article class="card landing-feature-card">
                     <span class="material-icons-outlined" aria-hidden="true">cloud_upload</span>
                     <h3>Snapshot uploader</h3>
-                    <p>Validate Amazon-reported stock by comparing historical snapshots with live carton data.</p>
+                    <p>Validate Marketplace-reported stock by comparing historical snapshots with live carton data.</p>
                     <ul>
                         <li>Automated status tracking per upload.</li>
-                        <li>Audit-ready history of every FNSKU.</li>
+                        <li>Audit-ready history of every product ID.</li>
                     </ul>
                 </article>
                 <article class="card landing-feature-card">
