--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
+    <link rel="manifest" href="../assets/site.webmanifest">
     <script>
         (function() {
             const token = localStorage.getItem('ww_auth_token');
