--- a/users.html
+++ b/users.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/users.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="manifest" href="./assets/site.webmanifest">
     <script>
         // Inline auth check
         (function() {
